# lzw_pattern_matching

./: CMakeLists.txt  README.md  algo.cpp  codewords_trie.hpp  input2  lemmas.hpp  lzw.cpp  output  suffix_tree.cpp  suffix_tree.hpp  suffix_tree_test.cpp
rmq/: naive_rmq.hpp  pm_rmq.hpp
